WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146025
REGRESSION(
r185012
): chat frame in Gmail now says "Something's not right"
https://bugs.webkit.org/show_bug.cgi?id=146025
Summary
REGRESSION(r185012): chat frame in Gmail now says "Something's not right"
Chris Dumez
Reported
2015-06-16 11:34:17 PDT
chat frame in GMail now says "Something's not right" after
r185012
. Radar: <
rdar://problem/21391412
>
Attachments
Patch
(5.35 KB, patch)
2015-06-16 11:55 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-06-16 11:55:37 PDT
Created
attachment 254961
[details]
Patch
Darin Adler
Comment 2
2015-06-16 12:08:55 PDT
Comment on
attachment 254961
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254961&action=review
> Source/WebCore/dom/Document.cpp:2764 > - double previousInterval = timerAlignmentInterval(); > - > m_isTimerThrottlingEnabled = shouldThrottle; > - > - if (previousInterval != timerAlignmentInterval()) > - didChangeTimerAlignmentInterval(); > + didChangeTimerAlignmentInterval();
Why this change?
Chris Dumez
Comment 3
2015-06-16 12:27:25 PDT
Comment on
attachment 254961
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254961&action=review
>> Source/WebCore/dom/Document.cpp:2764 >> + didChangeTimerAlignmentInterval(); > > Why this change?
Now timerAlignmentInterval() takes an argument that is timer-specific so we can no longer call it here to determine if we should call didChangeTimerAlignmentInterval(). We need to call didChangeTimerAlignmentInterval() to notify all timers that their alignment may have changed. It is better to call this one too often rather than not enough as otherwise we may fail to update the interval of some timers. If the document-level throttling state has changed, some timers in the Document (the ones that have reached the max nesting level) need to be updated so we need to call this function.
Chris Dumez
Comment 4
2015-06-16 12:48:26 PDT
Comment on
attachment 254961
[details]
Patch Clearing flags on attachment: 254961 Committed
r185602
: <
http://trac.webkit.org/changeset/185602
>
Chris Dumez
Comment 5
2015-06-16 12:48:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug