REGRESSION(r185012): chat frame in Gmail now says "Something's not right" https://bugs.webkit.org/show_bug.cgi?id=146025 <rdar://problem/21391412>

Reviewed by Darin Adler.

Only throttle timers in non-visible iframes once they've reached the
max nesting level to avoid throttling critical one-shot timers. This is
consistent with the default DOMTimer throttling behavior that is
defined in the specification.

Power-wise, we are mostly interested in DOMTimers that fire frequently
and cause high CPU usage over an extended period of time anyway.

* dom/Document.cpp:
(WebCore::Document::setTimerThrottlingEnabled):
(WebCore::Document::timerAlignmentInterval):
* dom/Document.h:
* dom/ScriptExecutionContext.cpp:
(WebCore::ScriptExecutionContext::timerAlignmentInterval):
* dom/ScriptExecutionContext.h:
* page/DOMTimer.cpp:
(WebCore::DOMTimer::alignedFireTime):

Canonical link: https://commits.webkit.org/164062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185602 268f45cc-cd09-0410-ab3c-d52691b4dbfc